--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </div>
             </div>
             <div class="drive">
-                <h2>Teslar를 직접 만나보세요.</h2>
+                <h2>Tesla를 직접 만나보세요.</h2>
                 <div class="box1">
                     <div class="pic">
                         <img src="images/compositor jpg.jpg" alt="" >
